syntax = "proto3";

package stream;
option csharp_namespace = "GrpcServices";
import "google/protobuf/timestamp.proto";

service DataStreamer{
  rpc SendStreamData (stream Request) returns (Response);
  rpc SendData (Request) returns (Response);
}

message Request{
  Message message = 1;
}

message Response{
}

message Message {
  string id = 1;
  string author = 2;
  google.protobuf.Timestamp timeOfMessage = 3;
  string text = 4;
  string source = 5;
}